chore: commit remaining in-flight work
Batch commit of pre-existing uncommitted work that shared the tree with the
INPX multiformat feature, intermixed at the file level and not cleanly
separable here:

- Semantic quick search / book embeddings (Ollama client, vector repo,
  migrations V163-V166, ⌘K palette).
- Smart metadata enrichment (agent work-identity resolver, prompt builder,
  proposal builder, settings UI) and its FB2 excerpt extractor.
- Task management surface (task history/service, overview, settings UI).
- Author-authority batch author preparation in the INPX writer.
- FB2 recognition fixes: resolve archived FB2 through the archive service for
  enrichment excerpts, and treat "." / ".." title-info as placeholders so the
  body title page recovers the real author/title.